--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  
+  <base href="<%= @base_url %>" />
   <script src="http://jwpsrv.com/library/pFnidpNJEeO6mCIACmOLpg.js"></script>
 </head>
 <body>
