--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= @page_title %></title>
+  <title><%= h(yield(:title) || @page_title) %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= yield(:head) %>
   <base href="<%= @base_url %>" />
   <script src="http://jwpsrv.com/library/pFnidpNJEeO6mCIACmOLpg.js"></script>
 </head>
