fix for opening url in a new windows

--- a/app/views/twit/search.html.erb
+++ b/app/views/twit/search.html.erb
@@ -134,7 +134,7 @@
                 <%= auto_link(t[:tweet].text, :html => { :target => '_blank' }) %>
               </td>
               <td>
-                <a href="<%= t[:url] %> target="_blank"><%= URI.parse(t[:url]).host %></a>
+                <a href="<%= t[:url] %>" target="_blank"><%= URI.parse(t[:url]).host %></a>
               </td>
             </tr>
           <% end %>
