--- a/app/views/twit/search.html.erb
+++ b/app/views/twit/search.html.erb
@@ -107,8 +107,64 @@
     .CSSTableGenerator tr:first-child td:last-child{
             border-width:0px 0px 1px 1px;
     }
+    
+    .textEntryContainer {
+          text-align: center;
+          margin: 10px 10%;
+          font-size: 1.2em;
+    }
+    .qtext {
+          -webkit-border-radius: 28;
+          -moz-border-radius: 28;
+          border-radius: 28px;
+          font-family: Verdana;
+          color: #0f0f0f;
+          font-size: 10pt;
+          padding: 10px 20px 10px 20px;
+          text-decoration: none;
+          width: 300px;
+    }
+
+    .qtext:focus {
+          outline: none;
+          border-color: #ff0f00;
+    }
+    
+    .btn {
+      background: #3498db;
+      background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+      background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+      background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+      background-image: -o-linear-gradient(top, #3498db, #2980b9);
+      background-image: linear-gradient(to bottom, #3498db, #2980b9);
+      -webkit-border-radius: 28;
+      -moz-border-radius: 28;
+      border-radius: 28px;
+      font-family: Verdana;
+      color: #f8f8f8;
+      font-size: 10pt;
+      padding: 10px 20px 10px 20px;
+      text-decoration: none;
+    }
+
+    .btn:hover {
+      background: #3cb0fd;
+      background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+      background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+      background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+      background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+      background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+      text-decoration: none;
+    }
+
     </style>
-  
+    <div class="textEntryContainer">
+      <form action="/twitter/search" method="get">
+      <strong>New Search: </strong>
+      <%= text_field_tag 'id', nil, :class => 'qtext', :placeholder => 'Enter search term...' %>
+      <%= submit_tag nil, :class => "btn" %>
+      </form>
+    </div>
     <h2 style="margin:auto 10%">Recent tweets with unique URLs for "<%= params[:id] %>"</h2>
     <div class="TweetTable">
       <div class="CSSTableGenerator">
