Added initial code for Document Library - dir structure view

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -5,6 +5,10 @@
     <%= submit_tag "Get URL Data" %>
   <% end %>
 </p>
+<br/>
+<p>
+  <%= link_to "View Document Library", companies_doclib_path %>
+</p>
 
 <!-- <p>
   <%  Company.all.each do |c| %>
