Add exception handling and managing different content type responses for URLs entered by user.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <%= yield(:head) %>
-  <base href="<%= @base_url %>" />
+  <!-- <base href="<%= @base_url %>" /> -->
   <script src="http://jwpsrv.com/library/pFnidpNJEeO6mCIACmOLpg.js"></script>
 </head>
 <body>
