--- a/app/views/companies/data.html.erb
+++ b/app/views/companies/data.html.erb
@@ -81,6 +81,12 @@
           });
       });
     </script>
+  <% elsif @image_url == true %>
+    <h1>Link to an image</h1>
+    <img src="<%= @final_url %>">
+      <% elsif @doc_url == true %>
+    <h1>Link to a document</h1>
+    <p>URL provided: <%= auto_link(@final_url, :html => { :target => '_blank' }) %> </p>
   <% else %>
     <strong>Reading Time:</strong> <%= @reading_minutes %> minutes<br/><br/>
     <h1 id="article-title"> <%= @title %> </h1>
@@ -91,7 +97,7 @@
     -->
     <div id="article-container">
       <div id="text-container">
-        <%= HTMLEntities.new.decode(@resolved_text).squish.html_safe %><br/><br/>
+        <%= HTMLEntities.new.decode(@page_content).squish.html_safe %><br/><br/>
       </div>
     </div>
     <div>
